--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 .cells {
     border: 1px solid black;
-    padding: 10px;
+    padding: auto;
     background-color: aquamarine;
 }
-.container{
+#container{
     display: grid;
-    width: 500px;
-    height: 500px;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    width: 600px;
+    height: 600px;
+ /* grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);*/
 }
