--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,11 @@
 body {
-    background-color: lightgray;
-    height: auto;
-    margin: 0;
-    overflow: hidden;
-    font-family: Roboto, sans-serif;
     display: flex;
+    margin: 0px;
     flex-direction: column;
-    justify-content: center;
-    align-items : center;
+    font-family: Roboto, sans-serif;
+    background-color: lightgray;
+    height: 100vh;
+ 
 }
 
 .cells {
@@ -15,16 +13,41 @@ body {
     padding: auto;
     background-color: white;
 }
+
 .content{
     padding: 50px   ;
     display: flex;
     justify-content: center;
     align-items : center;
 }
+.box {
+    background-color: lightcoral;
+    padding: 50px;
+    border-radius: 45px;
+}
+.title, .bottom {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    color: lightyellow;
+}
 #container{
     display: grid;
-    width: 600px;
-    height: 600px;
+    width: 550px;
+    height: 550px;
  /* grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);*/
+}
+
+.footer {
+    margin-top: auto;
+}
+
+.button{
+    background-color: transparent;
+    border: none;
+    font-size: 18px;
+    padding-top: 24px;
+    color: lightgoldenrodyellow;
 }
