--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@ body {
     padding: auto;
     background-color: white;
 }
-
+.cells.clicked {
+    background-color: red;
+  }
 .content{
     padding: 50px   ;
     display: flex;
